# Buckshot-Roulette-Python

./: .gitignore  LICENSE  README.md  cli_game.py  flask_app.py  game_test.py  new_engine.py  pyproject.toml  stat_engine.py  test.py  test_mp.py
buckshot_roulette/: __init__.py  ai.py  game.py  mp_game.py
buckshot_roulette/multiplayer/: ai.py  game.py
buckshot_roulette/singleplayer/: ai.py  game.py
static/: game_page.css  game_page.js  move_page.js
templates/: game_page.html  move_page.html
