[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "buckshot-roulette"
version = "0.0.5"
authors = [
  { name="Bytestorm" },
]
description = "Buckshot Roulette library for python, with complete game features & reasonable efficiency."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Bytestorm5/Buckshot-Roulette-Python"
Issues = "https://github.com/Bytestorm5/Buckshot-Roulette-Python/issues"

[tool.setuptools]
packages = ["buckshot_roulette"]